# testing-and-tuning-market-trading-systems

./: .coverage  .gitignore  AGENTS.md  ALGORITHMS.md  CLAUDE.md  CMakeLists.txt  CRITICAL_FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  README.md  README_CLAUDE.md  SETUP_CREDENTIALS.md  SYSTEM_ANALYSIS_REPORT.md  TOOLS.md  bias_remediation_report_20251009_225542.txt  binance_BTC_USDT_1h.txt  complete_test.py  database_diagnostic.py  debug_algorithms.py  demo_bias_remediation.py  env.example.txt  fix_getch.py  freqtrade_db  generated_validation_script.py  market_data.txt  mcpt_trn_input.txt  run_claude_workflow.py  run_end_to_end.py  selbias_input.txt  setup.py  simple_test.py  strategy_test_results.txt  test_automated_bias_remediation.py  test_pipeline.py  test_real_data.py  test_real_data_validation.py  test_stratval.py
BOOT_RATIO/: BOOT_RATIO.CPP
CD_MA/: CD_MA.CPP
CHOOSER/: CHOOSER.CPP
CHOOSER_DD/: CHOOSER_DD.CPP
CONFTEST/: CONFTEST.CPP
CSCV_MKT/: CSCV.CPP  CSCV_MKT.CPP
DEV_MA/: DIFF_EV.CPP  HEADERS.H  SVDCMP.CPP
DRAWDOWN/: DRAWDOWN.CPP
ENTROPY/: ENTROPY.CPP
STATN/: STATN.CPP
automation_outputs/: bias_remediation_report_20251009_233635.txt  bias_remediation_report_20251009_234036.txt  bias_remediation_report_20251028_114145.txt  oos_sample_ohlc.txt  run_results.json  sma_strategy_baseline_20251009_233635.json  sma_strategy_batch_parameters.json  sma_strategy_final_20251028_114145.json  sma_strategy_iter1_20251009_232503.json  sma_strategy_iter1_20251009_234036.json  sma_strategy_iter2_20251009_232503.json  sma_strategy_iter3_20251009_234036.json  sma_strategy_mt_correction.cpp  sma_strategy_oos_enforced.cpp  sma_strategy_parameter_reduced.cpp  sma_strategy_walk_forward.cpp  test_results.json
compat/: conio.h  malloc.h  platform_compat.h
config/: config_manager.py  database_manager.py  system_config.py
data/: larger_sample_data.txt  sample_close.txt  sample_ohlc.txt
end_to_end_results/: end_to_end_results_table.txt  end_to_end_summary.json
framework/: macd_strategy.cpp  rsi_strategy.cpp  runner.cpp  sma_strategy.cpp  strategy.h  strategy_batch_tester.cpp  strategy_factory.cpp  strategy_factory.h  strategy_registry.cpp  strategy_registry.h  strategy_tester.cpp  strategy_tester.h
mock_data_reports/: validation_results_1759293371.json  validation_results_1759294552.json  validation_results_1759295008.json  validation_results_1759295418.json  validation_results_1759296816.json
real_data_reports/: validation_results_1759298733.json  validation_results_1759299897.json  validation_results_1759342423.json  validation_results_1760080485.json  validation_results_1760212830.json  validation_results_1760213140.json  validation_results_1760214295.json  validation_results_1760214467.json  validation_results_1760216948.json  validation_results_1760217963.json
reports/: validation_results_1760214268.json  validation_results_1760214517.json  validation_results_1761677287.json
scripts/: run_5m_strategies.sh
strategys/: automated_bias_remediation.py  bias_remediation.py
strategys/db/: __init__.py  (+2 more)
stratval/: __init__.py
stratval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
temp_results/: validation_results_1761629459.json
test_reports/: validation_report_1759291275.html  validation_report_1759291344.html  validation_report_1760212824.html  validation_report_1760214464.html  validation_report_1760216042.html  validation_report_1760216559.html  validation_report_1760217573.html  validation_results_1759278863.json  validation_results_1759291143.json  validation_results_1759291181.json  validation_results_1759291239.json  validation_results_1759291275.json  validation_results_1759291344.json  validation_results_1760080478.json  validation_results_1760212824.json  validation_results_1760213131.json  validation_results_1760214281.json  validation_results_1760214291.json  validation_results_1760214295.json  validation_results_1760214464.json  validation_results_1760214467.json  validation_results_1760216042.json  validation_results_1760216356.json  validation_results_1760216559.json  validation_results_1760216751.json  validation_results_1760217142.json  validation_results_1760217372.json  validation_results_1760217573.json  validation_results_1760217768.json  validation_results_1760218157.json  validation_results_1760238794.json
tmp_reports/: validation_results_1760241277.json  validation_results_1760510116.json
tools/: BINANCE_DB_QUERIES.md  binance_to_txt.cpp  convert_binance_feather.sh  convert_real_data_format.py  evaluate_features.py  extract_db_data.py  feather_to_txt.py  file_watcher.py  generate_report.py  load_all_exchange_data.py  load_binance_to_db.py  run_automation.py  run_experiment.py  score_strategy.py  validate_data_integrity.py
(+106 files in other folders)
